# launchkit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/launchcontrol/: __init__.py  cli.py  launchcontrol.py
src/launchkit/: __init__.py  cli.py  launchkit.py
src/launchkit/openai/: terminal_tester.py
src/missioncontrol/: __init__.py  missioncontrol.py
src/missioncontrol/openai/: terminal_tester.py
src/missioncontrolbot/: __init__.py
src/missioncontrolbot/openai/: terminal_tester.py
