[project]
name = "missioncontrol"
version = "0.1.0"
description = ""
authors = [
    {name = "Ken Buskilla", email = "k@loopback.ai"},
    {name = "Yakir Buskilla", email = "yakir@loopback.ai"},
]
dependencies = [
    "openai>=1.3.0",
    "asyncer>=0.0.2",
    "httpx>=0.25.1",
    "pydantic>=2.5.1",
    "typer[all]>=0.9.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
mcb.cmd = "python src/missioncontrol/cli.py"
mcb.env_file = ".env"

[project.scripts]
mcb = "missioncontrol.cli:app"