[project]
name = "launchkit"
version = "0.1.4"
description = ""
authors = [
    {name = "Ken Buskilla", email = "k@loopback.ai"},
    {name = "Yakir Buskilla", email = "yakir@loopback.ai"},
]
dependencies = [
    "openai>=1.3.0",
    "asyncer>=0.0.2",
    "httpx>=0.25.1",
    "pydantic>=2.5.1",
    "typer[all]>=0.9.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.6",
]

[tool.pdm.scripts]
dev.cmd = "python src/launchkit/cli.py"
dev.env_file = ".env"

format.cmd = "ruff format src"
lint.cmd = "ruff check --fix src"

[project.scripts]
launchkit = "launchkit.cli:app"

